# fdeep-skin-test

./: CMakeLists.txt  main.cpp
model/: config.ini  model_images_v0.json
